# API-KUBERNETES

./: Actividades_SQL.sql  Cargo.toml  README.md  deployment.yaml  ingress.yaml  mysql-deployment.yaml  mysql-service.yaml  service.yaml
src/: main.rs
