[package]
name = "actividades-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["mysql", "offline", "runtime-actix-native-tls"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"